--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,7 @@
   },
   "linter": {
     "enabled": true,
+    "ignore": ["node_modules", ".next"],
     "rules": {
       "recommended": true
     }
